Main frame's unique name can always be null.

This simplifies the code a little bit + avoids consuming memory for what
is ultimately an unused value.

BUG=647392
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2329523003
Cr-Commit-Position: refs/heads/master@{#418976}

Former-commit-id: 5140a41c48c0932e9a2db3f969ce43393ae0dbef